testsuite/tests/properties/invalid_eq/correct_node.lkt
import common

class Example: FooNode {
    @export fun prop(): Bool = node.parent = node.as[FooNode]
}
